using Gtk;

namespace DatiCovid
{
    interface ILoad
    {
        void CaricaDati(ref Label lb, Liste l);
    }
}